# zearch

./: .gitignore  README.md  setup.cfg
examples/: example.ipynb
tests/: playground.py  test_zenodo_search.py  testing_zenodo_client.py
zenodo_search/: __init__.py  _version.py  utils.py  zsearch.py
zsearch/: __init__.py  _version.py  zsearch.py
