[metadata]
name = zenodo_search
version = 0.1.0a1
author = Matthias Probst
author_email = matth.probst@gmail.com
description = Perform Query on Zenodo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/zenodo_search
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.8, <3.11
include_package_data = True
install_requires =
    requests